--- a/CookPopularCSharpToolkit/CookPopularCSharpToolkit.csproj
+++ b/CookPopularCSharpToolkit/CookPopularCSharpToolkit.csproj
@@ -5,6 +5,7 @@
         <UseWindowsForms>true</UseWindowsForms>
         <TargetFrameworks>net46;net461;net5.0-windows</TargetFrameworks>
 
+		<Version>1.0.1.1-dev-20211113</Version>
         <PackageIcon>CSharp.png</PackageIcon>
         <PackageTags>c#,csharp,toolkit,</PackageTags>
         <Description>基于.NetFramework4.6.1和.Net5.0的C#工具方法</Description>
