Refine some methods

--- a/MvvmTestDemo/MvvmTestDemo.csproj
+++ b/MvvmTestDemo/MvvmTestDemo.csproj
@@ -56,6 +56,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\CookPopularControl\CookPopularControl.csproj" />
+        <ProjectReference Include="..\CookPopularCSharpToolkit\CookPopularCSharpToolkit.csproj" />
     </ItemGroup>
 
     <ItemGroup>
