--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,44 +1,42 @@
-<Project>    
-    <PropertyGroup>
-        <!--统一所有项目输出目录-->
-        <!--$(Platform)-->
-        <OutputPath>$(SolutionDir)Output\bin\$(Configuration)</OutputPath>
-        <PackageOutputPath>$(OutputPath)</PackageOutputPath>
-        <!--<BaseIntermediateOutputPath>$(SolutionDir)Output\obj\$(Platform)</BaseIntermediateOutputPath>-->
-        <IntermediateOutputPath>$(SolutionDir)Output\obj\$(Configuration)\$(ProjectName)</IntermediateOutputPath>
-        <UseHostCompilerIfAvailable>false</UseHostCompilerIfAvailable>
-        <TargetFrameworks>net46;net461;net5.0-windows</TargetFrameworks>
-        <Platforms>AnyCPU;x64;x86</Platforms>
-        <LangVersion>9.0</LangVersion>
-        <!--指示编译器是否应为相同的输入产生相同的程序集-->
-        <Deterministic>true</Deterministic>
-        <WarningLevel>4</WarningLevel>
-        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-        <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-        <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+<Project>
+  <Import Project="Version.props" />
+  <PropertyGroup>
+	<!--统一所有项目输出目录-->
+	<!--$(Platform)-->
+	<OutputPath>$(SolutionDir)Output\bin\$(Configuration)</OutputPath>
+	<PackageOutputPath>$(OutputPath)</PackageOutputPath>
+	<!--<BaseIntermediateOutputPath>$(SolutionDir)Output\obj\$(Platform)</BaseIntermediateOutputPath>-->
+	<IntermediateOutputPath>$(SolutionDir)Output\obj\$(Configuration)\$(MSBuildProjectName)</IntermediateOutputPath>
+	<UseHostCompilerIfAvailable>false</UseHostCompilerIfAvailable>
+	<TargetFrameworks>net46;net461;netcoreapp3.1;net5.0-windows</TargetFrameworks>
+	<Platforms>AnyCPU;x64;x86</Platforms>
+	<LangVersion>9.0</LangVersion>
+	<!--指示编译器是否应为相同的输入产生相同的程序集-->
+	<Deterministic>true</Deterministic>
+	<WarningLevel>4</WarningLevel>
+	<AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+	<GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
+	<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 
-        <!--CookPopularControl Nuget包说明配置 $(MSBuildToolsPath)-->
-        <PackageId>$(MSBuildProjectName)</PackageId>
-        <!--预发行版以时间为后缀-->
-        <Version>1.0.1.1-dev-20211109</Version>
-        <!--<Version>1.0.1.1-alpha02</Version>-->
-        <Authors>写代码的厨子</Authors>
-        <Company>写代码的厨子</Company>
-        <Product>$(MSBuildProjectName)</Product>
-        <Title>$(MSBuildProjectName)</Title>
-        <Description>基于.NetFramework4.6.1和.Net5.0 WPF控件库</Description>
-        <Copyright>Copyright © $(MSBuildProjectName) 2021</Copyright>
-        <PackageTags>xaml,wpf,ui,controls,windows,desktop,cookpopularcontrol,library</PackageTags>
-        <RepositoryUrl>https://gitee.com/cook-csharp/$(MSBuildProjectName)</RepositoryUrl>
-        <PackageProjectUrl>https://github.com/chancezheng/CookPopularControl</PackageProjectUrl>
-        <PackageReleaseNotes>预发行版</PackageReleaseNotes>
-    </PropertyGroup>
+	<!--CookPopularControl Nuget包说明配置 $(MSBuildToolsPath)-->
+	<PackageId>$(MSBuildProjectName)</PackageId>
+	<Authors>写代码的厨子</Authors>
+	<Company>写代码的厨子</Company>
+	<Product>$(MSBuildProjectName)</Product>
+	<Title>$(MSBuildProjectName)</Title>
+	<Description>基于.NetFramework4.6.1和.Net5.0 WPF控件库</Description>
+	<Copyright>Copyright © $(MSBuildProjectName) 2021</Copyright>
+	<PackageTags>xaml,wpf,ui,controls,windows,desktop,cookpopularcontrol,library</PackageTags>
+	<RepositoryUrl>https://gitee.com/cook-csharp/$(MSBuildProjectName)</RepositoryUrl>
+	<PackageProjectUrl>https://github.com/chancezheng/CookPopularControl</PackageProjectUrl>
+	<PackageReleaseNotes>预发行版</PackageReleaseNotes>
+  </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <OutputPath>$(SolutionDir)Output\bin\Debug</OutputPath>
-    </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	<OutputPath>$(SolutionDir)Output\bin\Debug</OutputPath>
+  </PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <OutputPath>$(SolutionDir)Output\bin\Release</OutputPath>
-    </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	<OutputPath>$(SolutionDir)Output\bin\Release</OutputPath>
+  </PropertyGroup>
 </Project>
