--- a/MvvmTestDemo/MvvmTestDemo.csproj
+++ b/MvvmTestDemo/MvvmTestDemo.csproj
@@ -38,6 +38,7 @@
         <None Remove="Resources\CarouselViewImages\8.jpg" />
         <None Remove="Resources\CarouselViewImages\9.jpg" />
         <None Remove="Resources\Gif\C.png" />
+        <None Remove="Resources\Gif\cook.gif" />
         <None Remove="Resources\Gif\CookCSharp.ico" />
         <None Remove="Resources\Gif\programmer.gif" />
         <None Remove="Resources\Gif\timg.jpg" />
@@ -70,6 +71,7 @@
         <Resource Include="Resources\CarouselViewImages\8.jpg" />
         <Resource Include="Resources\CarouselViewImages\9.jpg" />
         <Resource Include="Resources\Gif\C.png" />
+        <Resource Include="Resources\Gif\cook.gif" />
         <Resource Include="Resources\Gif\CookCSharp.ico" />
         <Resource Include="Resources\Gif\programmer.gif" />
         <Resource Include="Resources\Gif\timg.jpg" />
