--- a/CookPopularControl/CookPopularControl.csproj
+++ b/CookPopularControl/CookPopularControl.csproj
@@ -1,162 +1,165 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-    <PropertyGroup>
-        <UseWPF>true</UseWPF>
-        <UseWindowsForms>true</UseWindowsForms>
-        <OutputType>Library</OutputType>
-        <Nullable>enable</Nullable>
-        
-        <PackageIcon>WpfControl.png</PackageIcon>
-        <ApplicationIcon>Resources\Images\CookCSharp.ico</ApplicationIcon>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    </PropertyGroup>
+	<PropertyGroup>
+		<UseWPF>true</UseWPF>
+		<UseWindowsForms>true</UseWindowsForms>
+		<OutputType>Library</OutputType>
+		<Nullable>enable</Nullable>
 
-    <!--创建 snupkg 文件-->
-    <PropertyGroup>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    </PropertyGroup>
+		<PackageIcon>WpfControl.png</PackageIcon>
+		<ApplicationIcon>Resources\Images\CookCSharp.ico</ApplicationIcon>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+		<RepositoryUrl>https://gitee.com/cook-csharp/CookPopularControl</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/chancezheng/CookPopularControl</PackageProjectUrl>
+	</PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net5.0-windows|AnyCPU'">
-        <DocumentationFile>D:\WPFSourceCode\CookPopularControl\CookPopularControl\CookPopularControl.xml</DocumentationFile>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
-    </PropertyGroup>
+	<!--创建 snupkg 文件-->
+	<PropertyGroup>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+	</PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net461|AnyCPU'">
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
-        <DocumentationFile></DocumentationFile>
-    </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net5.0-windows|AnyCPU'">
+		<DocumentationFile>D:\WPFSourceCode\CookPopularControl\CookPopularControl\CookPopularControl.xml</DocumentationFile>
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+	</PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
-        <DocumentationFile>D:\WPFSourceCode\CookPopularControl\CookPopularControl\CookPopularControl.xml</DocumentationFile>
-    </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net461|AnyCPU'">
+		<DefineConstants>DEBUG;TRACE</DefineConstants>
+		<DocumentationFile></DocumentationFile>
+	</PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|AnyCPU'">
-        <DocumentationFile>D:\WPFSourceCode\CookPopularControl\CookPopularControl\CookPopularControl.xml</DocumentationFile>
-        <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
-    </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net461|AnyCPU'">
+		<DocumentationFile>D:\WPFSourceCode\CookPopularControl\CookPopularControl\CookPopularControl.xml</DocumentationFile>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <None Remove="CookPopularControl.xml" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-Black.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-BlackItalic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-Bold.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-BoldItalic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-Italic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-Light.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-LightItalic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-Medium.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-MediumItalic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
-        <None Remove="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\RobotoCondensed-Bold.ttf" />
-        <None Remove="Resources\Fonts\Roboto\RobotoCondensed-BoldItalic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\RobotoCondensed-Italic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\RobotoCondensed-Light.ttf" />
-        <None Remove="Resources\Fonts\Roboto\RobotoCondensed-LightItalic.ttf" />
-        <None Remove="Resources\Fonts\Roboto\RobotoCondensed-Regular.ttf" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.css" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.eot" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.js" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.json" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.svg" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.ttf" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.woff" />
-        <None Remove="Resources\Fonts\WindowIcons\iconfont.woff2" />
-        <None Remove="Resources\Images\CookCSharp.ico" />
-        <None Remove="Resources\Images\CookCSharp.png" />
-        <None Remove="Resources\Images\CookCSharpTransparent.ico" />
-        <None Remove="Resources\Images\MediaPlayerBackground.png" />
-        <None Remove="Resources\Images\WpfControl.png" />
-        <None Include="Resources\Images\CookCSharp.png">
-            <Pack>True</Pack>
-            <PackagePath></PackagePath>
-        </None>
-        <None Include="Resources\Images\WpfControl.png">
-          <Pack>True</Pack>
-          <PackagePath></PackagePath>
-        </None>
-    </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|AnyCPU'">
+		<DocumentationFile>D:\WPFSourceCode\CookPopularControl\CookPopularControl\CookPopularControl.xml</DocumentationFile>
+		<GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <None Include="..\.editorconfig" Link=".editorconfig" />
-    </ItemGroup>
+	<ItemGroup>
+		<None Remove="CookPopularControl.xml" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-Black.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-BlackItalic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-Bold.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-BoldItalic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-Italic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-Light.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-LightItalic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-Medium.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-MediumItalic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
+		<None Remove="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\RobotoCondensed-Bold.ttf" />
+		<None Remove="Resources\Fonts\Roboto\RobotoCondensed-BoldItalic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\RobotoCondensed-Italic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\RobotoCondensed-Light.ttf" />
+		<None Remove="Resources\Fonts\Roboto\RobotoCondensed-LightItalic.ttf" />
+		<None Remove="Resources\Fonts\Roboto\RobotoCondensed-Regular.ttf" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.css" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.eot" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.js" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.json" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.svg" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.ttf" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.woff" />
+		<None Remove="Resources\Fonts\WindowIcons\iconfont.woff2" />
+		<None Remove="Resources\Images\CookCSharp.ico" />
+		<None Remove="Resources\Images\CookCSharp.png" />
+		<None Remove="Resources\Images\CookCSharpTransparent.ico" />
+		<None Remove="Resources\Images\MediaPlayerBackground.png" />
+		<None Remove="Resources\Images\WpfControl.png" />
+		<None Include="Resources\Images\CookCSharp.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+		<None Include="Resources\Images\WpfControl.png">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="QRCoder" Version="1.4.1" />
-    </ItemGroup>
+	<ItemGroup>
+		<None Include="..\.editorconfig" Link=".editorconfig" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\CookPopularCSharpToolkit\CookPopularCSharpToolkit.csproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="QRCoder" Version="1.4.1" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <Resource Include="Resources\Fonts\Roboto\Roboto-Black.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-BlackItalic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-Bold.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-BoldItalic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-Italic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-Light.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-LightItalic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-Medium.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-MediumItalic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Bold.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\RobotoCondensed-BoldItalic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Italic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Light.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\RobotoCondensed-LightItalic.ttf" />
-        <Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Regular.ttf" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.css" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.eot" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.js" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.json" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.svg" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.ttf" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.woff" />
-        <Resource Include="Resources\Fonts\WindowIcons\iconfont.woff2" />
-        <Resource Include="Resources\Images\CookCSharp.ico" />
-        <Resource Include="Resources\Images\CookCSharp.png" />
-        <Resource Include="Resources\Images\CookCSharpTransparent.ico" />
-        <Resource Include="Resources\Images\MediaPlayerBackground.png" />
-        <Resource Include="Resources\Images\WpfControl.png">
-          <CopyToOutputDirectory></CopyToOutputDirectory>
-        </Resource>
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\CookPopularCSharpToolkit\CookPopularCSharpToolkit.csproj" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <Page Update="Themes\CookColors\GreenColor.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-        <Page Update="Themes\CookColors\OrangeColor.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-        <Page Update="Themes\CookColors\YellowColor.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-        <Page Update="Themes\CookColors\AquaColor.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-        <Page Update="Themes\CookColors\PurpleColor.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-        <Page Update="Themes\CookColors\BlueColor.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-        <Page Update="Themes\CookColors\RedColor.xaml">
-            <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-            <SubType>Designer</SubType>
-        </Page>
-    </ItemGroup>
+	<ItemGroup>
+		<Resource Include="Resources\Fonts\Roboto\Roboto-Black.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-BlackItalic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-Bold.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-BoldItalic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-Italic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-Light.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-LightItalic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-Medium.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-MediumItalic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Bold.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\RobotoCondensed-BoldItalic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Italic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Light.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\RobotoCondensed-LightItalic.ttf" />
+		<Resource Include="Resources\Fonts\Roboto\RobotoCondensed-Regular.ttf" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.css" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.eot" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.js" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.json" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.svg" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.ttf" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.woff" />
+		<Resource Include="Resources\Fonts\WindowIcons\iconfont.woff2" />
+		<Resource Include="Resources\Images\CookCSharp.ico" />
+		<Resource Include="Resources\Images\CookCSharp.png" />
+		<Resource Include="Resources\Images\CookCSharpTransparent.ico" />
+		<Resource Include="Resources\Images\MediaPlayerBackground.png" />
+		<Resource Include="Resources\Images\WpfControl.png">
+			<CopyToOutputDirectory></CopyToOutputDirectory>
+		</Resource>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Page Update="Themes\CookColors\GreenColor.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+			<SubType>Designer</SubType>
+		</Page>
+		<Page Update="Themes\CookColors\OrangeColor.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+			<SubType>Designer</SubType>
+		</Page>
+		<Page Update="Themes\CookColors\YellowColor.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+			<SubType>Designer</SubType>
+		</Page>
+		<Page Update="Themes\CookColors\AquaColor.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+			<SubType>Designer</SubType>
+		</Page>
+		<Page Update="Themes\CookColors\PurpleColor.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+			<SubType>Designer</SubType>
+		</Page>
+		<Page Update="Themes\CookColors\BlueColor.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+			<SubType>Designer</SubType>
+		</Page>
+		<Page Update="Themes\CookColors\RedColor.xaml">
+			<XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+			<SubType>Designer</SubType>
+		</Page>
+	</ItemGroup>
 
 </Project>
