--- a/CookPopularCSharpToolkit/CookPopularCSharpToolkit.csproj
+++ b/CookPopularCSharpToolkit/CookPopularCSharpToolkit.csproj
@@ -25,6 +25,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="log4net.config" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="log4net.config">
+        <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      </EmbeddedResource>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="log4net" Version="2.0.14" />
       <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
       <PackageReference Include="System.ComponentModel.Composition" Version="6.0.0-preview.1.21102.12" />
@@ -36,12 +46,6 @@
       <None Include="CSharp.png">
         <Pack>True</Pack>
         <PackagePath></PackagePath>
-      </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Update="log4net.config">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
