--- a/CookPopularCSharpToolkit/log4net.config
+++ b/CookPopularCSharpToolkit/log4net.config
@@ -1,165 +1,168 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
   </configSections>
   <log4net>
-    <root>
-      <!--控制级别，由低到高：ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF
+	<root>
+	  <!--控制级别，由低到高：ALL|DEBUG|INFO|WARN|ERROR|FATAL|OFF
           比如定义级别为INFO，则INFO级别向下的级别，比如DEBUG日志将不会被记录
           如果没有定义LEVEL的值，则缺省为DEBUG-->
-      <level value="ALL" />
-      <appender-ref ref="RollingFileDebug" />
-      <appender-ref ref="RollingFileInfo" />
-      <!--<appender-ref ref="RollingFileWarn" />
+	  <level value="ALL" />
+	  <appender-ref ref="RollingFileDebug" />
+	  <appender-ref ref="RollingFileInfo" />
+	  <!--<appender-ref ref="RollingFileWarn" />
       <appender-ref ref="RollingFileError" />-->
-      <appender-ref ref="RollingFileFatal" />
-    </root>
+	  <appender-ref ref="RollingFileFatal" />
+	</root>
 
-    <logger name="LoggerObject">
-      <level value="ALL"/>
-    </logger>
+	<logger name="LoggerObject">
+	  <level value="ALL"/>
+	</logger>
 
-    <!-- Debug 将日志以回滚文件的形式写到文件中 -->
-    <appender name="RollingFileDebug" type="log4net.Appender.RollingFileAppender" >
-      <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
-      <file value="Logs\\" />
-      <encoding value="UTF-8" />
-      <!-- 日志文件的命名规则 -->
-      <datePattern value="yyyyMM/dd/'ECG_Report.log'"/>
-      <!-- 将日志信息追加到已有的日志文件中-->
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="100" />
-      <maximumFileSize value="1MB" />
-      <!-- 指定按日期切分日志文件 -->
-      <rollingStyle value="Date"/>
-      <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
-      <staticLogFileName value="false" />
-      <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%m%newline"/>
-        <!--<conversionPattern value="[时间：%d] %m%newline"/>-->
-        <!--<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>-->
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMin" value="Debug" />
-        <param name="LevelMax" value="Debug" />
-      </filter>
-    </appender>
+	<!-- Debug 将日志以回滚文件的形式写到文件中 -->
+	<appender name="RollingFileDebug" type="log4net.Appender.RollingFileAppender" >
+	  <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
+	  <file value="Logs\\" />
+	  <encoding value="UTF-8" />
+	  <!-- 日志文件的命名规则 -->
+	  <datePattern value="yyyyMM-dd-'Log.log'"/>
+	  <!-- 将日志信息追加到已有的日志文件中-->
+	  <appendToFile value="true" />
+	  <rollingStyle value="Size" />
+	  <maxSizeRollBackups value="100" />
+	  <maximumFileSize value="10MB" />
+	  <!-- 指定按日期切分日志文件 -->
+	  <rollingStyle value="Date"/>
+	  <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
+	  <staticLogFileName value="false" />
+	  <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
+	  <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+	  <layout type="log4net.Layout.PatternLayout">
+		<conversionPattern value="%newline%newline***********************************************************************  %newline异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常)  %newline异常信息：%m  %newline"/>
+		<!--<conversionPattern value="%m%newline"/>-->
+		<!--<conversionPattern value="[时间：%d] %m%newline"/>-->
+		<!--<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>-->
+	  </layout>
+	  <filter type="log4net.Filter.LevelRangeFilter">
+		<param name="LevelMin" value="Debug" />
+		<param name="LevelMax" value="Debug" />
+	  </filter>
+	</appender>
 
-    <!-- Info 将日志以回滚文件的形式写到文件中 -->
-    <appender name="RollingFileInfo" type="log4net.Appender.RollingFileAppender" >
-      <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
-      <file value="Logs\\" />
-      <encoding value="UTF-8" />
-      <!-- 日志文件的命名规则 -->
-      <datePattern value="yyyyMM/dd/'ECG_Report.log'"/>
-      <!-- 将日志信息追加到已有的日志文件中-->
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="100" />
-      <maximumFileSize value="1MB" />
-      <!-- 指定按日期切分日志文件 -->
-      <rollingStyle value="Date"/>
-      <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
-      <staticLogFileName value="false" />
-      <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="[时间：%d] %m%newline"/>
-        <!--<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>-->
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMin" value="Info" />
-        <param name="LevelMax" value="Info" />
-      </filter>
-    </appender>
+	<!-- Info 将日志以回滚文件的形式写到文件中 -->
+	<appender name="RollingFileInfo" type="log4net.Appender.RollingFileAppender" >
+	  <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
+	  <file value="Logs\\" />
+	  <encoding value="UTF-8" />
+	  <!-- 日志文件的命名规则 -->
+	  <datePattern value="yyyyMM-dd-'Log.log'"/>
+	  <!-- 将日志信息追加到已有的日志文件中-->
+	  <appendToFile value="true" />
+	  <rollingStyle value="Size" />
+	  <maxSizeRollBackups value="100" />
+	  <maximumFileSize value="10MB" />
+	  <!-- 指定按日期切分日志文件 -->
+	  <rollingStyle value="Date"/>
+	  <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
+	  <staticLogFileName value="false" />
+	  <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
+	  <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+	  <layout type="log4net.Layout.PatternLayout">
+		<conversionPattern value="%newline%newline***********************************************************************  %newline异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常)  %newline异常信息：%m  %newline"/>
+		<!--<conversionPattern value="[时间：%d] %m%newline"/>-->
+		<!--<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>-->
+	  </layout>
+	  <filter type="log4net.Filter.LevelRangeFilter">
+		<param name="LevelMin" value="Info" />
+		<param name="LevelMax" value="Info" />
+	  </filter>
+	</appender>
 
-    <!-- Warn 将日志以回滚文件的形式写到文件中 -->
-    <appender name="RollingFileWarn" type="log4net.Appender.RollingFileAppender" >
-      <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
-      <file value="Logs\\" />
-      <encoding value="UTF-8" />
-      <!-- 日志文件的命名规则 -->
-      <datePattern value="yyyy-MM-dd/'ECG_Report.log'"/>
-      <!-- 将日志信息追加到已有的日志文件中-->
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="100" />
-      <maximumFileSize value="1MB" />
-      <!-- 指定按日期切分日志文件 -->
-      <rollingStyle value="Date"/>
-      <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
-      <staticLogFileName value="false" />
-      <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMin" value="Warn" />
-        <param name="LevelMax" value="Warn" />
-      </filter>
-    </appender>
+	<!-- Warn 将日志以回滚文件的形式写到文件中 -->
+	<appender name="RollingFileWarn" type="log4net.Appender.RollingFileAppender" >
+	  <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
+	  <file value="Logs\\" />
+	  <encoding value="UTF-8" />
+	  <!-- 日志文件的命名规则 -->
+	  <datePattern value="yyyy-MM-dd-'Log.log'"/>
+	  <!-- 将日志信息追加到已有的日志文件中-->
+	  <appendToFile value="true" />
+	  <rollingStyle value="Size" />
+	  <maxSizeRollBackups value="100" />
+	  <maximumFileSize value="10MB" />
+	  <!-- 指定按日期切分日志文件 -->
+	  <rollingStyle value="Date"/>
+	  <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
+	  <staticLogFileName value="false" />
+	  <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
+	  <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+	  <layout type="log4net.Layout.PatternLayout">
+		<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>
+	  </layout>
+	  <filter type="log4net.Filter.LevelRangeFilter">
+		<param name="LevelMin" value="Warn" />
+		<param name="LevelMax" value="Warn" />
+	  </filter>
+	</appender>
 
-    <!-- Error 将日志以回滚文件的形式写到文件中 -->
-    <appender name="RollingFileError" type="log4net.Appender.RollingFileAppender" >
-      <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
-      <file value="Logs\\" />
-      <encoding value="UTF-8" />
-      <!-- 日志文件的命名规则 -->
-      <datePattern value="yyyy-MM-dd/'ECG_Report.log'"/>
-      <!-- 将日志信息追加到已有的日志文件中-->
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="100" />
-      <maximumFileSize value="1MB" />
-      <!-- 指定按日期切分日志文件 -->
-      <rollingStyle value="Date"/>
-      <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
-      <staticLogFileName value="false" />
-      <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMin" value="Error" />
-        <param name="LevelMax" value="Error" />
-      </filter>
-    </appender>
+	<!-- Error 将日志以回滚文件的形式写到文件中 -->
+	<appender name="RollingFileError" type="log4net.Appender.RollingFileAppender" >
+	  <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
+	  <file value="Logs\\" />
+	  <encoding value="UTF-8" />
+	  <!-- 日志文件的命名规则 -->
+	  <datePattern value="yyyy-MM-dd-'Log.log'"/>
+	  <!-- 将日志信息追加到已有的日志文件中-->
+	  <appendToFile value="true" />
+	  <rollingStyle value="Size" />
+	  <maxSizeRollBackups value="100" />
+	  <maximumFileSize value="10MB" />
+	  <!-- 指定按日期切分日志文件 -->
+	  <rollingStyle value="Date"/>
+	  <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
+	  <staticLogFileName value="false" />
+	  <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
+	  <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+	  <layout type="log4net.Layout.PatternLayout">
+		<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m  %newline***********************************************************************%newline"/>
+	  </layout>
+	  <filter type="log4net.Filter.LevelRangeFilter">
+		<param name="LevelMin" value="Error" />
+		<param name="LevelMax" value="Error" />
+	  </filter>
+	</appender>
 
-    <!-- Fatal 将日志以回滚文件的形式写到文件中 -->
-    <appender name="RollingFileFatal" type="log4net.Appender.RollingFileAppender" >
-      <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
-      <file value="Logs\\" />
-      <!--计数类型为1，2，3…-->
-      <!--<countDirection value="1"/>-->
-      <!--使用Unicode编码-->
-      <encoding value="UTF-8" />
-      <!-- 日志文件的命名规则 -->
-      <datePattern value="yyyyMM/dd/'ECG_Report.log'"/>
-      <!-- 将日志信息追加到已有的日志文件中-->
-      <appendToFile value="true" />
-      <rollingStyle value="Size" />
-      <maxSizeRollBackups value="100" />
-      <maximumFileSize value="100MB" />
-      <!-- 指定按日期切分日志文件 -->
-      <rollingStyle value="Date"/>
-      <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
-      <staticLogFileName value="false" />
-      <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%newline%newline***********************************************************************  %newline异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常信息：%m%newline"/>
-        <!--<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常位置：%location  %newline异常信息：%m  %newline***********************************************************************%newline"/>-->
-      </layout>
-      <filter type="log4net.Filter.LevelRangeFilter">
-        <param name="LevelMin" value="Warn" />
-        <param name="LevelMax" value="Fatal" />
-      </filter>
-    </appender>
+	<!-- Fatal 将日志以回滚文件的形式写到文件中 -->
+	<appender name="RollingFileFatal" type="log4net.Appender.RollingFileAppender" >
+	  <!-- 日志文件存放位置，可以为绝对路径也可以为相对路径 -->
+	  <file value="Logs\\" />
+	  <!--计数类型为1，2，3…-->
+	  <!--<countDirection value="1"/>-->
+	  <!--使用Unicode编码-->
+	  <encoding value="UTF-8" />
+	  <!-- 日志文件的命名规则 -->
+	  <datePattern value="yyyyMM-dd-'Log.log'"/>
+	  <!-- 将日志信息追加到已有的日志文件中-->
+	  <appendToFile value="true" />
+	  <rollingStyle value="Size" />
+	  <maxSizeRollBackups value="100" />
+	  <maximumFileSize value="10MB" />
+	  <!-- 指定按日期切分日志文件 -->
+	  <rollingStyle value="Date"/>
+	  <!-- 当将日期作为日志文件的名字时，必须将staticLogFileName的值设置为false -->
+	  <staticLogFileName value="false" />
+	  <!-- 最小锁定模式，以允许多个进程可以写入同一个文件 -->
+	  <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+	  <layout type="log4net.Layout.PatternLayout">
+		<!--<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常) %newline异常信息：%m %newline***********************************************************************%newline%newline%newline" />-->
+		<conversionPattern value="%newline%newline***********************************************************************  %newline异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常代码行号：%line(在%class.%method中触发异常)  %newline异常信息：%m  %newline"/>
+		<!--<conversionPattern value="异常时间：%d [运行耗时：%r ms] [线程ID：%thread]  %newline异常级别：%-5p  %newline异常对象：%logger  %newline异常文件：%file  %newline异常位置：%location  %newline异常信息：%m  %newline***********************************************************************%newline"/>-->
+	  </layout>
+	  <filter type="log4net.Filter.LevelRangeFilter">
+		<param name="LevelMin" value="Warn" />
+		<param name="LevelMax" value="Fatal" />
+	  </filter>
+	</appender>
   </log4net>
 </configuration>
